public/assets/css/style.css
/* Pages Style */
@import "./beranda.css";
@import "./profile.css";
@import "./kegiatan.css";
@import "./prestasi.css";
@import "./tentang-kami.css";
@import "./jncc.css";

/* Font Family */
body {
    font-family: 'Muli', sans-serif;
}

/* Template Warna*/
.putih-kuning {
    background-color: #fffff6;
}

.hitam-abu {
    background-color: #707070;
}

.abu-abu {
    background-color: #bfbfbf
}

.merah {
    background-color: #b71c1cf2;
}

/* ====================================== */

/**** NAVBAR ****/
.navbar {
    background-color: #fffff6;
    font-weight: normal;
    opacity: 80%;
    text-transform: uppercase;
    font-weight: bolder;
}

.navbar-brand img {
    width: 4rem;
}

.nav-link {
    margin-right: 1rem;
    color: #C12821 !important;
}


@media (min-width: 1200px) {
    .navbar-brand img {
        width: 4rem;
        margin-left: 100px;
    }

    .nav-link {
        margin-right: 3rem;
        color: #C12821 !important;
    }
}

.navbar-toggler {
    background-color: #C12821;
}

span.navbar-toggler-icon {
    color: #FFFFFF !important;
}

.nav-link.active,
.nav-link:hover {
    border-bottom: 1px solid #C12821 !important;
    width: max-content;
    margin-bottom: -1px;
}

/* Navbar Scrolled */
#navbar.scrolled {
    background-color: #fffff8 !important;
    transition: 500ms linear;
    opacity: 100%;
}

#navbar.scrolled.nav-link {
    font-weight: 700;
}


/* NAVBAR MOBILE VERSION */
@media (max-width: 767.98px) {
    .navbar {
        background-color: #9E1212 !important;
        opacity: 100%;
        text-transform: uppercase;
        font-weight: lighter;
    }

    .navbar-brand img {
        width: 4rem;
        background-color: #FFFFFF;
        border-radius: 50%;
        width: 40px;
        margin-left: 0px;
    }

    .nav-link {
        margin-right: 2rem;
        color: #FFFFFF !important;
        margin-top: 5px;
    }

    .navbar-toggler {
        background-color: #FFFFFF !important;
        width: 40px;
        padding: 3px;
    }

    .nav-link.active,
    .nav-link:hover {
        border-bottom: 1px solid #FFFFFF !important;
        width: max-content;
        margin-bottom: -1px;
    }

    #navbar.scrolled {
        background-color: #9E1212 !important;
        opacity: 100%;
    }

    #navbar.scrolled.nav-link {
        font-weight: 700;
    }

}
/* ====================================== */

/**** FOOTER****/
.footer-copyright {
    color: #FFFFFF;
    text-transform: uppercase;
    padding-top: 10px;
    /* background-color: #BEA6A1; */
    height: 50px;
}

#footer-top {
    border-bottom: 1.5px solid #fff;
}

.row.w-90 {
    width: 90%;
    margin: auto;
}

.footer-title {
    color: #E5C35B;
    font-weight: lighter;
    font-size: 1rem;
    letter-spacing: .12rem;
}

#footer-logo {
    height: 75px;
    width: 75px;
}

#footer-bottom img {
    height: 30px;
    width: 30px;
}

#scroll {
    position: fixed;
    right: 15px;
    bottom: 15px;
    cursor: pointer;
    width: 50px;
    height: 50px;
    background-color: #ffc107;
    text-indent: -9999px;
    display: none;
    -webkit-border-radius: 60px;
    -moz-border-radius: 60px;
    border-radius: 60px
}

#scroll span {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -8px;
    margin-top: -12px;
    height: 0;
    width: 0;
    border: 8px solid transparent;
    border-bottom-color: #ffffff;
}

#scroll:hover {
    background-color: #ffc107;
    opacity: .8;
    filter: "alpha(opacity=80)";
    -ms-filter: "alpha(opacity=80)";
}


/* ====================================== */
/* BERITA JYC */
.jumbotron-berita {
    background-image: url(../img/kegiatan/slide-1.png);
    background-size: cover;
    min-height: 500px;
}

#banner-berita {
    background: url(../img/banner-page/berita.JPG) no-repeat center center fixed;
    display: table;
    height: 40vh;
    position: relative;
    width: 100%;
    background-size: cover;
}

.text-berita {
    background-color: rgba(0, 0, 0, 0.6);
    color: #f8f9fe;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    letter-spacing: .1rem;
}

.text-berita h1 {
    text-shadow: rgba(255, 255, 255, 0.1);
    font-size: 2.5rem;
    font-weight: 700;
    letter-spacing: .5rem;
}

#tag-detail-berita a,
#tag-detail-berita a:hover {
    color: white;
}

#konten-berita.w-80 {
    width: 90%;
    margin: auto;
}

#isi-detail-berita p {
    font-size: 0.9rem;
}

#isi-detail-berita blockquote {
    padding: 0rem 2.5rem;
    font-size: 1.2rem;
}

#sidebar-berita a {
    color: #707070;
}

/* Social Links */
#fb {
    color: #4267B2;
    opacity: .9;
}

#fb:hover {
    color: #4267B2;
    opacity: 1;
}

#twitter {
    color: #00acee;
    opacity: .85;
}

#twitter:hover {
    color: #00acee;
    opacity: 1;
}

#youtube {
    color: #ff0000;
    opacity: .85;
}

#youtube:hover {
    color: #ff0000;
    opacity: 1;
}

#ig {
    color: #bc2a8d;
    opacity: .85;
}

#ig:hover {
    color: #bc2a8d;
    opacity: 1;
}

#gmail {
    color: #B23121;
    opacity: .85;
}

#gmail:hover {
    color: #B23121;
    opacity: 1;
}

li.breadcrumb-item {
    color: #707070;
}

.judul-berita,
.judul-berita a {
    font-size: 1rem;
    color: #414141;
    font-weight: bold;
}

.isi-berita {
    font-size: .8rem;
}

@media (min-width: 992px) {

    .judul-berita,
    .judul-berita a {
        font-size: 1.3rem;
        color: #414141;
        font-weight: 600;
    }

    #konten-berita.w-80 {
        width: 85%;
        margin: auto;
    }

    .text-berita {
        background-color: rgba(0, 0, 0, 0.6);
        color: #f8f9fe;
        display: table-cell;
        text-align: center;
        vertical-align: middle;
        letter-spacing: .2rem;
    }

    .isi-berita {
        font-size: 1.1rem;
    }

    #isi-detail-berita p {
        font-size: 1.2rem;
    }

    .text-berita h1 {
        text-shadow: rgba(255, 255, 255, 0.1);
        font-size: 3.5rem;
        font-weight: 900;
        letter-spacing: 1rem;
    }

    #sidebar-berita {
        border-left: 1px solid #dee2e6 !important;
        padding-left: 3rem !important;
    }

}


.berita h3 {
    color: #707070;
    margin-right: auto;
    margin-left: auto;
    padding-bottom: 10px;
    text-align: center;
    border-bottom: 1.5px solid #C12821;
    width: 287px;
}

/* .card {
    margin: 20px 10px;
    padding: 20px 10px;
} */


/* ====================================== */
/* PRESTASI PAGE */
#konten-prestasi.w-80 {
    width: 90%;
    margin: auto;
    background-image: url('/public/assets/img/cup.png');
}

@media (min-width: 992px) {
    #konten-prestasi.w-80 {
        width: 90%;
        margin: auto;
    }

}

.prestasi h3 {
    color: #707070;
    margin-right: auto;
    margin-left: auto;
    padding-bottom: 10px;
    text-align: center;
    border-bottom: 1.5px solid #C12821;
    width: 287px;
}


h2.center-align {
    border-bottom: 2px solid #b71c1c;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
}

/* BERITA PAGE */
.judul- .my-0 {
    margin: 0px !important;
    font-weight: bold;
}

#search-berita {
    margin-top: 20px;
    border: 2px solid #b71c1c;
}

.footer-border {
    border-right: 1px solid whitesmoke;
}

.berita-border {
    border-right: 1px solid #b71c1c;
}

.card-border {
    border-bottom: 1px solid #b71c1c;
}

.social-links {
    width: 45px;
    height: auto;
}

/* a.nav-link.active {
    text-decoration: underline;
    text-decoration-color: whitesmoke;
}

a.nav-link.active:hover {
    text-decoration: underline;
    text-decoration-color: whitesmoke;
    border-bottom: whitesmoke;
} */


/* Carousel static */
.btn-min-block {
    min-width: 170px;
    line-height: 26px;
}

.btn-clear {
    color: #FFF;
    background-color: transparent;
    border-color: #FFF;
    margin-right: 15px;
}

.btn-clear:hover {
    color: #000;
    background-color: #FFF;
}




/* BERITA */

.berita-h {
    display: block;
    z-index: 5;
}

/* Keperluan Halaman Oprec */
#banner-oprec {
    background: url(../img/kegiatan/banner-oprec.jpg)no-repeat center center fixed;
    display: table;
    height: 100vh;
    position: relative;
    width: 100%;
    background-size: cover;
}

#text-oprec {
    height: 100%;
    width: 100%;
    /* background-color: rgba(0, 0, 0, 0.2); */
    color: #f8f9fe;
    /* font-size: 13rem;
    font-weight: 900;
    text-shadow: rgba(255, 255, 255, 0.5); */
    padding: 9rem 0rem;
}

#text-oprec h1 {
    font-size: 2rem;
    font-weight: 800;
    text-shadow: rgba(255, 255, 255, 0.5);
}

/* Make circles that indicate the steps of the form: */
.step {
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: rgba(183, 28, 28, 0.95);
    border: none;
    border-radius: 50%;
    display: inline-block;
    opacity: 0.5;
}

.step.active {
    opacity: 1;
}

/* Mark the steps that are finished and valid: */
.step.finish {
    background-color: rgba(183, 28, 28, 0.95);
}

.invalid {
    background-color: #ffdddd;
}

.tab {
    display: none;
}

#no_wa {
    color: white;
}

